[package]
name = "rust_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
hex = "0.4.3"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["serde"] }
serde = "1.0.195"
serde_json = "1.0.111"
sha256 = "1.5.0"
