[package]
name = "rust_blockchain"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayref = "0.3.7"
byteorder = "1.5.0"
ed25519-dalek = { version = "2.1.0", features = ["rand_core"] }
hex = "0.4.3"
num-bigint = "0.4.4"
rand = "0.8.5"
rsa = { version = "0.9.6", features = ["serde"] }
serde = "1.0.195"
serde_json = "1.0.111"
sha256 = "1.5.0"
reqwest = { version = "0.11.23", features = ["blocking"] }
